# nfr-alg-app

./: .gitignore
api/include/: apiheader.h  common.h  cv_utils.h  utils.h  videodec.h  yolov8infer.h  yolov8obbinfer.h
app/: CMakeLists.txt  build_nvidia.sh  main.cpp
config/: config.json  config_16rtsp_1hbb_1obb.json  config_16rtsp_2hbb_1obb.json  config_16rtsp_4hbb.json  config_8rtsp_1hbb_1obb.json
config/rockchip/: config_16rtsp_1hbb_1obb.json  config_16rtsp_2hbb_1obb.json
config/sophon/: config_16rtsp_3hbb_1obb.json  config_16rtsp_4hbb.json  config_32rtsp_4hbb.json  config_8rtsp_1hbb_1obb.json
src/: TSingleIns.h  app.h  app_init.h  app_loop.h  app_timer.h  app_video.h  app_yolov8.h  app_yolov8obb.h  appcfg.h  applog.h  mplog.h
tests/: CMakeLists.txt  app_rtsp_test.cpp  app_yolov8_test.cpp  app_yolov8obb_test.cpp  build_rockchip.sh  build_sophon.sh
